@@ -165,12 +165,13 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
+        <!--
         <configuration>
           <argLine>
-          @{jaCoCoArgLine} --add-opens gr2116-project.RESTservice/gr2116.restapi=ALL-UNNAMED
+          @{jaCoCoArgLine} add-opens gr2116.RESTservice/gr2116.restapi=ALL-UNNAMED
           </argLine>
       </configuration>
-
+    -->
       </plugin>
 
       <!-- run checkstyle plugin -->
